<resources>
    <string name="custom_res_shutter_pressed">camera_shutter_btn_pressed</string>
    <string name="custom_res_stop_shutter_pressed">camera_stop_btn_pressed</string>
    <string name="custom_res_mainbar_btn_background">camera_main_bar_selector</string>
    <string name="custom_res_mainbar_btn_pressed">camera_photo_bar_btn_pressed</string>
    <string name="custom_res_effect_item_background">effect_item_background_selector</string>
    <string name="custom_res_effect_item_selected">photo_preset_frame_selected</string>
    <string name="custom_res_action_btn_background1">common_b_button</string>
    <string name="custom_res_action_btn_background2">common_b_button</string>
    <string name="custom_res_action_btn_background3">common_b_button</string>
    <string name="custom_res_action_btn_background4">common_b_button</string>
    <string name="custom_res_request_btn_background">common_b_button</string>
    <string name="custom_res_tumbler">tumbler_level_current</string>
    <string name="custom_res_submenu_handle_press">camera_submenu_bar_pressed</string>
    <string name="custom_res_submenu_handle_open_press">camera_submenu_bar_open_pressed</string>
    <string name="custom_res_menu_bar_press">camera_menu_bar_pressed</string>
    <string name="custom_res_menu_bar_open_press">camera_menu_bar_open_pressed</string>
    <string name="custom_res_cameraflip_btn_background">icon_camera_flip_selector</string>
    <string name="custom_res_onscreen_camera_switch_btn">common_b_button_small</string>
    <string name="custom_res_common_mail_checkbox">common_mail_checkbox</string>
    <string name="custom_res_common_sub_panel_navbar">common_sub_panel_navbar</string>
    <string name="custom_res_common_b_button">common_b_button</string>
    <string name="custom_res_common_b_button_selected">common_b_button_selected</string>
    <string name="custom_res_common_footer_btn">common_titlebar_btn</string>
    <string name="custom_res_common_footer_btn_selected">common_titlebar_btn_selected</string>
    <string name="custom_res_camera_switch_btn">camera_switch_btn</string>
    <string name="custom_res_effect_panel_button_selector">camera_effect_panel_button_selector</string>
    <string name="custom_res_photo_frame_pressed">camera_photo_frame_pressed</string>
    <string name="custom_res_gallery_button_selector">camera_gallery_button_selector</string>
    <string name="custom_res_review_btn_pressed">camera_review_menu_bar_pressed</string>
    <string name="custom_res_review_btn_selector">camera_review_btn_selector</string>
    <string name="custom_res_back_to_camera_btn_pressed">camera_btn_back_camera_pressed</string>
    <string name="custom_res_back_to_camcorder_btn_pressed">camera_btn_back_video_pressed</string>
    <string name="custom_res_common_radio_on">common_radiobutton_on</string>
    <string name="custom_res_common_radio_selected">common_radiobutton_selected</string>
    <string name="custom_res_common_radio_off">common_radiobutton_off</string>
    <string name="custom_res_common_radio_off_selected">common_radiobutton_off_selected</string>
    <string name="custom_res_title_background">common_titlebar_sublevel</string>
    <string name="custom_res_mirror_light_bottom_bar">mirror_light_bottom_bar</string>
    <string name="custom_res_mirror_dark_bottom_bar">mirror_dark_bottom_bar</string>
    <string name="custom_res_mirror_bright_icon">bright_mirror_icon</string>
    <string name="custom_res_mirror_dark_icon">dark_mirror_icon</string>
    <string name="custom_res_scene_frame_pressed">scene_frame_pressed</string>
    <string name="camera_demo_video">http://m.youtube.com/watch?v=f3PGC4bQYIs</string>
    <string name="htc_private_app">Camera</string>
    <string name="camcorder_name">Camcorder</string>
    <string name="snapbooth_name">Snapbooth</string>
    <string name="mirror_name">Mirror</string>
    <string name="wait">Please wait…</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="no_storage_camcorder">Please insert an SD card before using the camcorder.</string>
    <string name="not_write_storage">Unable to save file to SD card due to insufficient file permissions.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="not_enough_phone_storage">Your phone storage is full.</string>
    <string name="mass_storage_camera">Camera is unavailable because SD card is mounted to a PC. Disconnect USB cable to proceed.</string>
    <string name="mass_storage_camcorder">Camcorder is unavailable because SD card is mounted to a PC. Disconnect USB cable to proceed.</string>
    <string name="mass_storage_phone_camera">Camera is unavailable because your phone is being used as USB storage. Disconnect USB cable to proceed.</string>
    <string name="mass_storage_phone_camcorder">Camcorder is unavailable because your phone is being used as USB storage. Disconnect USB cable to proceed.</string>
    <string name="not_write_phone_storage">Unable to save file to phone storage due to insufficient file permissions.</string>
    <string name="flash_disable_hint">Flash is disabled due to low battery power, cold weather, or a running application that uses a lot of power, like Wi-Fi hotspot and phone.</string>
    <string name="flash_disable_hint_battery_power">Unable to use flash because your battery level is too low.</string>
    <string name="flash_disable_hint_cold_weather">Unable to use flash due to cold weather.</string>
    <string name="flash_disable_hint_phone_call">Unable to use flash because a phone call is in progress.</string>
    <string name="flash_disable_hint_hotspot">Unable to use flash because the Wi-Fi hotspot feature is in use.</string>
    <string name="mass_storage_fs_max_file_reach">Video size limit reached</string>
    <string name="how_to_start_panorama">Press the capture button to start panorama</string>
    <string name="how_to_start_panorama_ds">Press capture button and pan</string>
    <string name="panorama_start_panning_left_right">Pan left or right slowly to continue</string>
    <string name="panorama_start_panning_up_down">Pan up or down slowly to continue</string>
    <string name="panorama_hold">Hold</string>
    <string name="panorama_stitching_images">Stitching photos...</string>
    <string name="panorama_stitching_error_images">Oops, please pan the camera smoothly and try again. Stitching current photos...</string>
    <string name="processing_image">Processing...</string>
    <string name="optimal_3D_in_landscape">Please hold the phone horizontally for 3D capture to function properly.</string>
    <string name="auto_upload_first_time_dialog">Would you like to auto backup your camera shots to Facebook?</string>
    <string name="auto_upload_confirm_dialog">You can change this setting anytime from Settings-->Auto Upload</string>
    <string name="other_usage_camera">Unable to launch the camera because it is in use by another application.</string>
    <string name="other_usage_camcorder">Unable to launch the camcorder because it is in use by another application.</string>
    <string name="on_screen_btn_effects">Effects</string>
    <string name="on_screen_btn_gallery">Gallery</string>
    <string name="on_screen_btn_enhance_photo">Enhance</string>
    <string name="on_screen_btn_trim_video">Trim</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="auto">Auto</string>
    <string name="on_capital">On</string>
    <string name="off_capital">Off</string>
    <string name="time_2_seconds">2 seconds</string>
    <string name="time_3_seconds">3 seconds</string>
    <string name="time_5_seconds">5 seconds</string>
    <string name="time_10_seconds">10 seconds</string>
    <string name="no_limit">No limit</string>
    <string name="resolution">Resolution</string>
    <string name="video_quality">Video quality</string>
    <string name="white_balance">White balance</string>
    <string name="self_timer">Self-timer</string>
    <string name="effect">Effect</string>
    <string name="image_adjustments_custom">Custom</string>
    <string name="scene">Scenes</string>
    <string name="auto_capture">Auto capture</string>
    <string name="one_face">1 face</string>
    <string name="two_faces">2 faces</string>
    <string name="auto_capture_timer">Timer</string>
    <string name="self_portrait">Self-portrait</string>
    <string name="resolution_1_1">Resolution - 1:1</string>
    <string name="resolution_5_3">Resolution - 5:3</string>
    <string name="resolution_16_9">Resolution - 16:9</string>
    <string name="resolution_Tablet_16_9">Resolution - 16:9</string>
    <string name="resolution_3_2">Resolution - 3:2</string>
    <string name="resolution_4_3">Resolution - 4:3</string>
    <string name="wb_incandescent">Incandescent</string>
    <string name="wb_fluorescent">Fluorescent</string>
    <string name="wb_daylight">Daylight</string>
    <string name="wb_cloudy">Cloudy</string>
    <string name="jps_file_format">jps</string>
    <string name="mpo_file_format">mpo</string>
    <string name="file_format_3gpp">3gpp</string>
    <string name="file_format_mp4">mp4</string>
    <string name="review_duration">Review duration</string>
    <string name="file_format">File format</string>
    <string name="camera_switch">Switch camera</string>
    <string name="camera_3D_status">3D camera</string>
    <string name="front_camera_mode">Mirror mode</string>
    <string name="quality">Quality</string>
    <string name="flash_mode">Flash mode</string>
    <string name="capture_format">Capture format</string>
    <string name="format_JPEG">JPEG</string>
    <string name="encode_tyoe">Encoding type</string>
    <string name="recording_limit">Recording length</string>
    <string name="time_stamp">Time stamp</string>
    <string name="image_ratio">Widescreen</string>
    <string name="image_ratio_wideon_5_3">Resolution - 5:3 (Widescreen)</string>
    <string name="image_ratio_wideon_16_9">Resolution - 16:9 (Widescreen)</string>
    <string name="image_ratio_wideon_3_2">Resolution - 3:2 (Widescreen)</string>
    <string name="image_ratio_wideoff">Resolution - 4:3 (Standard photo size)</string>
    <string name="record_with_audio">Record with audio</string>
    <string name="storage">Storage</string>
    <string name="storage_card">Storage card</string>
    <string name="fast_frame_recording">Slow motion (2x)</string>
    <string name="stereo_recording">Stereo recording</string>
    <string name="storage_phone">Phone storage</string>
    <string name="geo_tagging">Geo-tag photos</string>
    <string name="post_processing">Auto enhance</string>
    <string name="auto_focus">Auto focus</string>
    <string name="face_detection">Face detection</string>
    <string name="shutter_sound">Shutter sound</string>
    <string name="image_adjustment">Image adjustments</string>
    <string name="metering_mode">Metering mode</string>
    <string name="iso">ISO</string>
    <string name="grid">Grid</string>
    <string name="smile_capture">Smile Capture</string>
    <string name="blink_detection">Blink detection</string>
    <string name="auto_upload">Auto Upload</string>
    <string name="auto_upload_service">Off</string>
    <string name="set_default">Reset to default</string>
    <string name="switch_main">Main</string>
    <string name="switch_secondary">Secondary</string>
    <string name="setting_contrast">Contrast</string>
    <string name="setting_saturation">Saturation</string>
    <string name="setting_sharpness">Sharpness</string>
    <string name="brightness_level_tile">Exposure</string>
    <string name="property_level_p2">+2</string>
    <string name="property_level_p1">+1</string>
    <string name="property_level_0">0</string>
    <string name="property_level_m1">-1</string>
    <string name="property_level_m2">-2</string>
    <string name="camera_tutorial_item">Tutorial</string>
</resources>