<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@com.htc:string/menu_settings" android:key="group">
        <CheckBoxPreference android:persistent="true" android:title="@string/camera_switch" android:key="pref_camera_switch" android:defaultValue="false" android:summaryOn="@string/switch_secondary" android:summaryOff="@string/switch_main" />
        <CheckBoxPreference android:persistent="true" android:title="@string/camera_3D_status" android:key="pref_camera_3D_status" android:defaultValue="false" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <CheckBoxPreference android:persistent="true" android:title="@string/self_portrait" android:key="pref_camera_self_portrait" android:defaultValue="false" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <ListPreference android:entries="@array/pref_selftimer_choices" android:title="@string/self_timer" android:key="pref_camera_self_timer" android:defaultValue="none" android:dialogTitle="@string/self_timer" android:entryValues="@array/pref_selftimer_values" />
        <ListPreference android:entries="@array/pref_scene_text_sense_3_0" android:title="@string/scene" android:key="pref_camera_scene" android:defaultValue="auto" android:dialogTitle="@string/scene" android:entryValues="@array/pref_scene_values_sense_3_0" />
        <ListPreference android:entries="@array/pref_effect_choices" android:title="@string/effect" android:key="pref_camera_effect" android:defaultValue="none" android:dialogTitle="@string/effect" android:entryValues="@array/pref_effect_values" />
        <com.android.camera.widget.CustomPreference android:title="@string/image_adjustment" android:key="pref_camera_image_property" />
        <ListPreference android:title="@string/white_balance" android:key="pref_set_white_balance" android:dialogTitle="@string/white_balance" />
        <ListPreference android:entries="@array/pref_iso_choices" android:title="@string/iso" android:key="pref_camera_iso" android:defaultValue="auto" android:dialogTitle="@string/iso" android:entryValues="@array/pref_iso_values" />
        <ListPreference android:title="@string/resolution" android:key="pref_set_resolution" android:dialogTitle="@string/resolution" />
        <ListPreference android:entries="@array/pref_review_duration_choices" android:title="@string/review_duration" android:key="pref_camera_review_duration" android:defaultValue="3s" android:dialogTitle="@string/review_duration" android:entryValues="@array/pref_review_duration_values" />
        <ListPreference android:entries="@array/pref_storage_choices" android:title="@string/storage" android:key="pref_camera_storage_location" android:defaultValue="main_memory" android:dialogTitle="@string/storage" android:entryValues="@array/pref_storage_values" />
        <ListPreference android:entries="@array/pref_3D_file_format_choices" android:title="@string/file_format" android:key="pref_camera_3D_file_format" android:defaultValue="mpo" android:dialogTitle="@string/file_format" android:entryValues="@array/pref_3D_file_format_values" />
        <CheckBoxPreference android:persistent="true" android:title="@string/image_ratio" android:key="pref_camera_image_ratio" android:defaultValue="true" android:summaryOn="@string/image_ratio_wideon_3_2" android:summaryOff="@string/image_ratio_wideoff" />
        <CheckBoxPreference android:persistent="true" android:title="@string/geo_tagging" android:key="pref_camera_geo_tagging" android:defaultValue="true" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <CheckBoxPreference android:persistent="true" android:title="@string/front_camera_mode" android:key="pref_front_camera_mode" android:defaultValue="true" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <CheckBoxPreference android:persistent="true" android:title="@string/post_processing" android:key="pref_post_processing" android:defaultValue="true" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <CheckBoxPreference android:persistent="true" android:title="@string/auto_focus" android:key="pref_camera_auto_focus" android:defaultValue="true" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <CheckBoxPreference android:persistent="true" android:title="@string/face_detection" android:key="pref_face_detection" android:defaultValue="true" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <CheckBoxPreference android:persistent="true" android:title="@string/shutter_sound" android:key="pref_play_shutter_sound" android:defaultValue="true" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <CheckBoxPreference android:persistent="true" android:title="@string/grid" android:key="pref_grid" android:defaultValue="false" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <CheckBoxPreference android:persistent="true" android:title="@string/smile_capture" android:key="pref_smile_capture" android:defaultValue="false" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <CheckBoxPreference android:persistent="true" android:title="@string/blink_detection" android:key="pref_blink detection" android:defaultValue="true" android:summaryOn="@string/on_capital" android:summaryOff="@string/off_capital" />
        <Preference android:title="@string/auto_upload" android:key="pref_auto_upload" android:summary="@string/auto_upload_service" android:defaultValue="facebook" />
        <Preference android:title="@string/set_default" android:key="pref_set_default" />
        <Preference android:title="@string/camera_tutorial_item" android:key="pref_camera_tutorial" />
    </PreferenceCategory>
</PreferenceScreen>
